Админ может задавать максимальное число фото в номинации

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -107,6 +107,7 @@ ru:
         list: "Номинации"             
         title: "Название"
         description: "Описание"
+        max_photo_count: "Макс. кол-во фотографий"
       edit:
         edit: "Редактировать номинацию"  
 
