Добавлена возможность переключения языка

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,5 +20,36 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
-  nomination_empty: "Nomination empty"
+  save: "Save"
+  opened: "Opened"
+  in_process: "in process"
+  closed: "closed"
+  complaint: "complaint"
+  proposal: "proposal"
+  contest: "contest"
+  comments: "comments"
+  portfolio: "portfolio"
+  review: "review"
+  deleted: "will be deleted"
+  review_quote_exceeded: "review quote exceeded"
+  portfolio_quote_exceeded: "portfolio quote exceeded"
+  usial: "regulat"
+  fiap: "FIAP"
+  open: "open"
+  private: "private"
+  comp_photo_already_posted: "photo have been alreade posted"
+  apply: "apply"
+  nomination_empty: "no nomination chosen"
+  photo_ids_empty: "no photo chosen"
+  competition_too_late: "contest is closed"
+  max_nomination_capacity_exceeded: "max limimit reached"
+  gallery: "Gallery"
+  contests: "Contests"
+  news: "News"
+  project_name: "Photohome"
+  sign_in: "Sign in"
+  sign_out: "Sign out"
+  change_password: "Change password"
+  profile: "Profile"
+  sign_up: "Sign up"
+  forgot_password: "Forgot password ?"
