Раздел новостей показывать списком

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -54,12 +54,16 @@ ru:
   paricipate_in_competition: "Фотография учавствовала в 1 или более конкурсах и не может быть удалена"
   photo_was_deleted: "Фотография была удалена"
   incorrect_last_date: "Дата сдачи работ должна быть до даты открытия конкурса"
+  # Для хлебных крошек названия
   contests: "Конкурсы"
   home: "На главную"
   apply_: "Подать заявку"
   photos_: "Фотографии"
   sent_photos: "Отправленные фотографии"
+  novelties_: "Новости"
+
   new: "Новая запись"
+
 
   change_password: "Сменить пароль"
   profile: "Профиль"
