Перенес смену пароля в профиль

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -65,7 +65,7 @@ ru:
   new: "Новая запись"
 
 
-  change_password: "Сменить пароль"
+  change_password: "Личные данные"
   profile: "Профиль"
   sign_up: "Регистрация"
 
