--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -150,5 +150,9 @@ ru:
         new: "Новый альбом"
       new:
         new_album: "Новый альбом"
+    site_photos:
+      index: 
+        title: "Галлерея сайта"
+
 
 
