Статьи на первой странице (случайные)

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -62,6 +62,7 @@ ru:
   sent_photos: "Отправленные фотографии"
   novelties_: "Новости"
   articles_: "Статьи" # _ чтобы не подхватывалось articles в названии таблицы 
+  more: "...еще"
 
   new: "Новая запись"
 
