Make user profile accesseble

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -63,9 +63,8 @@ ru:
   novelties_: "Новости"
   articles_: "Статьи" # _ чтобы не подхватывалось articles в названии таблицы 
   more: "...еще"
-
   new: "Новая запись"
-
+  edit_user: "Редактировать личные данные"
 
   change_password: "Личные данные"
   profile: "Профиль"
