Translate photo_saved

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -76,6 +76,7 @@ ru:
   in_letters: "Входящие"
   jury: "Жюри"
   tickets: "Тикеты"
+  photos_saved: "Фотографии были успешно сохранены !"
 
 
   # photos: "PHH"
