Можно выбирать главную статью и прочие статьи для главной страницы

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -47,7 +47,7 @@ ru:
   gallery: "Фотографии"
   contests: "Конкурсы"
   news: "Новости"
-  project_name: "Фотодом"
+  project_name: "ТДФ"
   sign_in: "Войти"
   login: "Войти"
   sign_out: "Выйти"
