Make age label instead age badge, change color for diff ages, put labels inside of novelties and articles

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -212,6 +212,7 @@ ru:
       index:
         title: "Название"
         new: "Новая запись"
+        age_policy: "Ограничение"
       new:
         title: "Новая запись"
       edit:
