Change status codes for competion request

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -88,7 +88,8 @@ ru:
 
   # Для ответов на запросы на конкурсы
   responses:
-    accept: "Заявка утверждена."
+    awaiting: "Ожидает рассмотрения"
+    accepted: "Заявка утверждена."
     no_money: "Отказ. Участие не оплачено."
     no_condition: "Отказ. Не выполнены условия участия."
     other_reasons: "Отказ. Иная причина."
