--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -88,7 +88,8 @@ ru:
   record_updated: "Запись обновлена"
   promoted: "На главной ?" 
   status_changed: "Изменение статуса заявки"
-
+  choose_photo: "Выберите фотографии"
+  
   # Для ответов на запросы на конкурсы
   responses:
     awaiting: "Ожидает рассмотрения"
