--- a/config/locales/simple_form.ru.yml
+++ b/config/locales/simple_form.ru.yml
@@ -22,6 +22,10 @@ ru:
         last_name: 'Фамилия'
         remember_me: 'Запомнить меня'
         about: 'Обо мне'
+        digest: "Дайджест"
+        content: "Содержание"
+        title: "Название"
+        age_policy: "Возрастное ограничение"
       topic:
         new:
           name: 'Название'
@@ -37,6 +41,7 @@ ru:
         topic: "Раздел"
         destination_id: "Назначение"
         age_policy: "Возрастное ограничение"
+        theme_tokens: "Теги"
       comment:
         title: "Заголовок"
         comment: "Комментарий"  
@@ -54,10 +59,6 @@ ru:
         nomination_id: "Номинация" 
       admin_album:
         title: "Название" 
-      admin_article:
-        title: "Название"
-        content: "Содержание"
-        digest: "Дайджест"
       letter:
         title: "Заголовок"
         content: Содержание
