Добавлена фамилия пользователя в админ списке

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -20,6 +20,10 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 ru:
+  fio: 'ФИО'
+  email: 'Почта'
+  registered: 'Зарегистрирован'
+  role: 'Роль'
   login: 'Псевдоним'
   save: "Сохранить"
   opened: "Открыто"
