Возможность активировать пользователей вручную

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -23,6 +23,9 @@ ru:
   fio: 'ФИО'
   email: 'Почта'
   registered: 'Зарегистрирован'
+  confirmed: 'Активирован'
+  confirmation: 'Активация'
+  unconfirmed: 'Активировать'
   role: 'Роль'
   login: 'Псевдоним'
   save: "Сохранить"
