Галереи имеют авторов (из входящих в них фотографий)

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -21,11 +21,13 @@
 
 ru:
   fio: 'ФИО'
+  edit: 'Редактировать'
   email: 'Почта'
   registered: 'Зарегистрирован'
   confirmed: 'Активирован'
   confirmation: 'Активация'
   unconfirmed: 'Активировать'
+  authors: 'Авторы'
   role: 'Роль'
   login: 'Псевдоним'
   save: "Сохранить"
