--- a/config/locales/simple_form.ru.yml
+++ b/config/locales/simple_form.ru.yml
@@ -67,7 +67,7 @@ ru:
         content: Содержание
         letter_users_tokens: "Адресаты"
       admin_setting:
-        album: "Альбом"
+        album: "Галерея"
         novelty: "Главная новость"
         article: "Главная статья"
         articles: "Статьи"
