Подробная информация о пользователе в админском просмотре

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -20,6 +20,31 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 ru:
+  unfilled_profile: "Профиль не заполнен !"
+  user: "Пользователь"
+  email: "Поча"                  
+  sign_in_count: "Число вхождений"    
+  current_sign_in_at: "Текущий сеанс"
+  last_sign_in_at: "Последний раз заходил"
+  current_sign_in_ip: "Текущий IP"
+  last_sign_in_ip: "Последний IP"
+  created_at: "Дата регистрации"
+  updated_at: "Дата последнего изменения"
+  name: "Имя"
+  confirmed_at: "Дата подтверждения регистрации"
+  confirmation_sent_at: "Дата отправки подтверждения"
+  last_name: "Фамилия"
+  zip: "Индекс"
+  adress: "Адрес"
+  zip_code: "Индекс"
+  city: "Город"
+  country: "Страна"
+  phone: "Телефон"
+  about: "О пользователе"
+  login: "Логин"
+  slug: "Slug"
+  birth_date: "Дата рождения"
+  age: "Возраст"
   remove_cache: "Удалить файлы кеша"
   album: "Галерея"
   all: "Все"
