--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -11,17 +11,18 @@ en:
     error_notification:
       default_message: "Please review the problems below:"
     # Labels and hints examples
-    # labels:
-    #   defaults:
-    #     password: 'Password'
-    #   topics:
-    #     new:
-    #       name: 'Название'
-    #       content: "Описание"
-    #     edit:
-    #       email: 'E-mail.'
-    # hints:
-    #   defaults:
-    #     username: 'User name to sign in.'
-    #     password: 'No special characters, please.'
+    labels:
+      defaults:
+        password: 'Password'
+        terms_of_service: 'Agreed'
+      topics:
+        new:
+          name: 'Название'
+          content: "Описание"
+        edit:
+          email: 'E-mail.'
+    hints:
+      defaults:
+        username: 'User name to sign in.'
+        password: 'No special characters, please.'
 
