--- a/config/locales/simple_form.ru.yml
+++ b/config/locales/simple_form.ru.yml
@@ -89,6 +89,11 @@ ru:
         age: "Возраст"
       admin_competition_request_response:
         response_id: "Ответ"
+      site_rule:
+        locale: 'Язык'
+        rules: 'Правила'
+        rules_digest: 'Дайджест'
+
 
 
     # hints:
