--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,6 +20,7 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
+  rules: "Terms of use"
   save: "Save"
   opened: "Opened"
   in_process: "in process"
