--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -20,6 +20,8 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 ru:
+  tags: "Теги"
+  
   rules: "Правила"
   about_us: "О нас"
   saved: 'Данные сохранены'
